Updated overflow css on body to fix scrollbar problem.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
   justify-content: center;
   height: 100vh;
   font-family: "Kumbh Sans", sans-serif;
